# fastmcp-marker

./: .dockerignore  .gitignore  Dockerfile  README.md  build_venv.cmd  build_venv.ps1  build_venv.sh  conversion_service.py  conversion_service_original.py  conversion_service_subprocess.py  conversion_service_zip.py  debug_file_collection.py  docker-compose.yml  gradio_app.py  gradio_app_advanced.py  gradio_app_advanced_full.py  gradio_app_original.py  main.py  mcp_server.py  mypy.ini  pyproject.toml  quick_test.py  start_service.py  start_services.sh  test_batch_conversion.py  test_button.py  test_conversion_direct.py  test_gradio_api_correct.py  test_gradio_simple.py  test_real_pdf.py  test_subprocess.py  test_system.py  test_unified_service.py  test_windows_fixes.py  test_worker_config.py  test_zip_conversion.py  uv.mdc  windows_fix.py
.devcontainer/: Dockerfile  devcontainer.json
stubs/marker/: models.pyi
stubs/marker/config/: __init__.pyi  parser.pyi
stubs/marker/converters/: pdf.pyi
tests/: test_gradio_api_extended.py  test_unified_service.py  test_worker_config.py  test_zip_conversion.py
